[tool.poetry]
name = "gridappsd-2030_5"
version = "1.3.1a0"
description = ""
authors = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
packages = [{ include = "ieee_2030_5" }, { include = "ieee_2030_5_gui" }]
license = "BSD-3-Clause"
maintainers = ["C. Allwardt <3979063+craig8@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/GRIDAPPSD/gridappsd-2030_5"
repository = "https://github.com/GRIDAPPSD/gridappsd-2030_5"
documentation = "https://github.com/GRIDAPPSD/gridappsd-2030_5"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Flask = "^2.0.3"
pickleDB = "^0.9.2"
tzlocal = "^4.2"
simplekv = "^0.14.1"
dataclasses-json = "^0.5.7"
gevent = "^21.12.0"
trio = "^0.21.0"
grequests = "^0.6.0"
flask-talisman = "^1.0.0"
blinker = "^1.5"
click = "^8.1.3"
flask-session = "^0.5.0"
pyyaml = "^6.0.1"
#gridappsd-field-bus = {version = "^2024.4.1a0", allow-prereleases = true}
#gridappsd-python = {version = "^2024.4.1a0", allow-prereleases = true}
xsdata = {extras = ["lxml"], version = "^25.7"}
# Fixes issue with pypi.org not serving the correct version of docutils
docutils = "!=0.21"
gridappsd-field-bus = "2024.8.1a1"
gridappsd-certificate-store = "^0.3.0"
cachetools = "^6.1.0"
pyopenssl = "^25.0.0"
pandas = "^2.2.3"
zodb = "^6.0.1"


[tool.poetry.group.dev.dependencies]
m2r2 = "^0.3.2"
pytest = "^7.1.3"
pycallgraph2 = "^1.1.3"
pytest-describe = "^2.1.0"
pre-commit = "^2.17.0"
toml = "^0.10.2"
ruff = "^0.13.2"

[tool.pytest.ini_options]
addopts = "-s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poetry.scripts]
2030_5_ctl = 'ieee_2030_5.control:_main'
2030_5_server = 'ieee_2030_5.__main__:_main'
2030_5_shutdown = 'ieee_2030_5.__main__:_shutdown'
2030_5_proxy = 'ieee_2030_5.basic_proxy:_main'
2030_5_cert = 'ieee_2030_5.certs:_main'
2030_5_gridappsd = 'ieee_2030_5.config_setup:_main'
2030_5_gui = 'ieee_2030_5_gui.__main__:_main'
